--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "cors": "2.8.5",
-    "express": "4.17.2"
+    "dotenv": "11.0.0",
+    "express": "4.17.2",
+    "mongoose": "6.1.6"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
