--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development nodemon index.js",
     "start": "NODE_ENV=production node index.js",
     "test": "NODE_ENV=test jest --verbose --silent",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watchAll"
   },
   "keywords": [],
   "author": "",
