--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon index.js",
     "start": "NODE_ENV=production node index.js",
-    "test": "NODE_ENV=test jest --verbose --silent",
+    "test": "NODE_ENV=test PORT=3001 jest --verbose tests/users.test.js",
     "test:watch": "npm run test -- --watchAll"
   },
   "keywords": [],
@@ -19,10 +19,12 @@
     "supertest": "6.2.1"
   },
   "dependencies": {
+    "bcrypt": "5.0.1",
     "cors": "2.8.5",
     "dotenv": "11.0.0",
     "express": "4.17.2",
-    "mongoose": "6.1.6"
+    "mongoose": "6.1.6",
+    "mongoose-unique-validator": "3.0.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json",
